[gd_scene load_steps=5 format=4 uid="uid://v2a1k3bj3ej6"]

[ext_resource type="Script" uid="uid://0fc38bpe3bp1" path="res://scenes/tile_map_2d.gd" id="1_ea03x"]
[ext_resource type="TileSet" uid="uid://dfkh5hec5x3pj" path="res://tilesets/world_map_tile_set.tres" id="1_xkaxe"]
[ext_resource type="Resource" uid="uid://dtghhxby8vsw1" path="res://resources/continent_builder_0.tres" id="3_xqttj"]
[ext_resource type="TileSet" uid="uid://vaxtapuyhm5e" path="res://tilesets/hills2.tres" id="4_kvulu"]

[node name="Node2D" type="Node2D"]
texture_filter = 1
script = ExtResource("1_ea03x")
tile_set = ExtResource("1_xkaxe")
continent_builder = ExtResource("3_xqttj")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAIAAAABAAEAAAAEAAIAAAACAAIAAAAEAAIAAAACAAMAAAAEAAIAAAADAAMAAAAEAAIAAAAEAAQAAAAEAAIAAAAFAAQAAAAEAAIAAAAGAAUAAAAEAAIAAAAHAAUAAAAEAAIAAAAIAAUAAAAEAAIAAAAIAAYAAAABAAAAAAAJAAYAAAAFAAEAAAAKAAYAAAABAAIAAAALAAYAAAACAAIAAAAMAAcAAAABAAEAAAANAAcAAAACAAEAAAAOAAgAAAAEAAEAAAAPAAgAAAACAAAAAAAQAAgAAAABAAAAAAARAAkAAAACAAEAAAASAAoAAAADAAIAAAATAAoAAAAEAAIAAAATAAsAAAAEAAIAAAAUAAwAAAAEAAIAAAAVAA0AAAAEAAIAAAAVAA4AAAAEAAIAAAAVAA8AAAAEAAIAAAAVABAAAAAAAAAAAAAUABAAAAAEAAIAAAATABAAAAADAAAAAAASABEAAAACAAEAAAARABEAAAABAAEAAAARABAAAAACAAIAAAAAAAEAAAAEAAIAAAAAAAIAAAAEAAIAAAAAAAMAAAAEAAIAAAAAAAQAAAAEAAIAAAAAAAUAAAAEAAIAAAAAAAYAAAAEAAIAAAAAAAcAAAAEAAIAAAAAAAgAAAAEAAIAAAAAAAkAAAAEAAIAAAAAAAoAAAAEAAIAAAAAAAsAAAAEAAIAAAAAAAwAAAAEAAIAAAAAAA0AAAAEAAIAAAAAAA4AAAAEAAIAAAAAAA8AAAAEAAIAAAAAABAAAAAEAAIAAAAAABEAAAAEAAIAAAAAABIAAAAEAAIAAAAAABMAAAAEAAIAAAAAABQAAAAEAAIAAAAAABUAAAAEAAIAAAAAABYAAAAEAAIAAAABAAAAAAAEAAIAAAABAAIAAAAEAAIAAAABAAMAAAAEAAIAAAABAAQAAAAEAAIAAAABAAUAAAAEAAIAAAABAAYAAAAEAAIAAAABAAcAAAAEAAIAAAABAAgAAAAEAAIAAAABAAkAAAAEAAIAAAABAAoAAAAEAAIAAAABAAsAAAAEAAIAAAABAAwAAAAEAAIAAAABAA0AAAAEAAIAAAABAA4AAAAEAAIAAAABAA8AAAAEAAIAAAABABAAAAAEAAIAAAABABEAAAAEAAIAAAABABIAAAAEAAIAAAABABMAAAAEAAIAAAABABQAAAAEAAIAAAABABUAAAAEAAIAAAABABYAAAAEAAIAAAACAAAAAAAEAAIAAAACAAEAAAAEAAIAAAACAAQAAAAEAAIAAAACAAUAAAAEAAIAAAACAAYAAAAEAAIAAAACAAcAAAAEAAIAAAACAAgAAAAEAAIAAAACAAkAAAAEAAIAAAACAAoAAAAEAAIAAAACAAsAAAAEAAIAAAACAAwAAAAEAAIAAAACAA0AAAAEAAIAAAACAA4AAAAEAAIAAAACAA8AAAAEAAIAAAACABAAAAAEAAIAAAACABEAAAAEAAIAAAACABIAAAAEAAIAAAACABMAAAAEAAIAAAACABQAAAAEAAIAAAACABUAAAAEAAIAAAACABYAAAAEAAIAAAADAAAAAAAEAAIAAAADAAEAAAAEAAIAAAADAAIAAAAEAAIAAAADAAQAAAAEAAIAAAADAAUAAAAEAAIAAAADAAYAAAAEAAIAAAADAAcAAAAEAAIAAAADAAgAAAAEAAIAAAADAAkAAAAEAAIAAAADAAoAAAAEAAIAAAADAAsAAAAEAAIAAAADAAwAAAAAAAAAAAADAA0AAAAAAAEAAAADAA4AAAAAAAIAAAADAA8AAAAAAAMAAAADABAAAAAEAAIAAAADABEAAAAEAAIAAAADABIAAAAEAAIAAAADABMAAAAEAAIAAAADABQAAAAEAAIAAAADABUAAAAEAAIAAAADABYAAAAEAAIAAAAEAAAAAAAEAAIAAAAEAAEAAAAEAAIAAAAEAAIAAAAEAAIAAAAEAAMAAAAEAAIAAAAEAAUAAAAEAAIAAAAEAAYAAAAEAAIAAAAEAAcAAAAEAAIAAAAEAAgAAAAEAAIAAAAEAAkAAAAEAAIAAAAEAAoAAAAEAAIAAAAEAAsAAAAEAAIAAAAEAAwAAAABAAAAAAAEAA0AAAABAAEAAAAEAA4AAAABAAIAAAAEAA8AAAABAAMAAAAEABAAAAAEAAIAAAAEABEAAAAEAAIAAAAEABIAAAAEAAIAAAAEABMAAAAEAAIAAAAEABQAAAAEAAIAAAAEABUAAAAEAAIAAAAEABYAAAAEAAIAAAAFAAAAAAAEAAIAAAAFAAEAAAAEAAIAAAAFAAIAAAAEAAIAAAAFAAMAAAAEAAIAAAAFAAUAAAAEAAIAAAAFAAYAAAAEAAIAAAAFAAcAAAAEAAIAAAAFAAgAAAAEAAIAAAAFAAkAAAAEAAIAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAIAAAAFAAwAAAAFAAEAAAAFAA0AAAACAAEAAAAFAA4AAAACAAIAAAAFAA8AAAACAAMAAAAFABAAAAAEAAIAAAAFABEAAAAEAAIAAAAFABIAAAAEAAIAAAAFABMAAAAEAAIAAAAFABQAAAAEAAIAAAAFABUAAAAEAAIAAAAFABYAAAAEAAIAAAAGAAAAAAAEAAIAAAAGAAEAAAAEAAIAAAAGAAIAAAAEAAIAAAAGAAMAAAAEAAIAAAAGAAQAAAAEAAIAAAAGAAYAAAAEAAIAAAAGAAcAAAAEAAIAAAAGAAgAAAAEAAIAAAAGAAkAAAAEAAIAAAAGAAoAAAABAAAAAAAGAAsAAAABAAEAAAAGAAwAAAABAAIAAAAGAA0AAAABAAEAAAAGAA4AAAABAAIAAAAGAA8AAAABAAMAAAAGABAAAAAEAAIAAAAGABEAAAAEAAIAAAAGABIAAAAEAAIAAAAGABMAAAAEAAIAAAAGABQAAAAEAAIAAAAGABUAAAAEAAIAAAAGABYAAAAEAAIAAAAHAAAAAAAEAAIAAAAHAAEAAAAEAAIAAAAHAAIAAAAEAAIAAAAHAAMAAAAEAAIAAAAHAAQAAAAEAAIAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAEAAAAHAAgAAAAAAAIAAAAHAAkAAAAAAAEAAAAHAAoAAAAFAAEAAAAHAAsAAAACAAEAAAAHAAwAAAACAAIAAAAHAA0AAAACAAEAAAAHAA4AAAACAAIAAAAHAA8AAAAFAAAAAAAHABAAAAAAAAEAAAAHABEAAAAAAAMAAAAHABIAAAAEAAIAAAAHABMAAAAEAAIAAAAHABQAAAAEAAIAAAAHABUAAAAEAAIAAAAHABYAAAAEAAIAAAAIAAAAAAAEAAIAAAAIAAEAAAAEAAIAAAAIAAIAAAAEAAIAAAAIAAMAAAAEAAIAAAAIAAQAAAAEAAIAAAAIAAcAAAABAAEAAAAIAAgAAAABAAIAAAAIAAkAAAABAAEAAAAIAAoAAAABAAIAAAAIAAsAAAABAAEAAAAIAAwAAAABAAIAAAAIAA0AAAABAAEAAAAIAA4AAAABAAIAAAAIAA8AAAABAAEAAAAIABAAAAABAAIAAAAIABEAAAABAAMAAAAIABIAAAAEAAIAAAAIABMAAAAEAAIAAAAIABQAAAAEAAIAAAAIABUAAAAEAAIAAAAIABYAAAAEAAIAAAAJAAAAAAAEAAIAAAAJAAEAAAAEAAIAAAAJAAIAAAAEAAIAAAAJAAMAAAAEAAIAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAEAAAAJAAcAAAACAAEAAAAJAAgAAAACAAIAAAAJAAkAAAACAAEAAAAJAAoAAAACAAIAAAAJAAsAAAACAAEAAAAJAAwAAAACAAIAAAAJAA0AAAACAAEAAAAJAA4AAAACAAIAAAAJAA8AAAACAAEAAAAJABAAAAACAAIAAAAJABEAAAACAAMAAAAJABIAAAAEAAIAAAAJABMAAAAEAAIAAAAJABQAAAAEAAIAAAAJABUAAAAEAAIAAAAJABYAAAAEAAIAAAAKAAAAAAAEAAIAAAAKAAEAAAAEAAIAAAAKAAIAAAAEAAIAAAAKAAMAAAAEAAIAAAAKAAQAAAABAAAAAAAKAAUAAAABAAEAAAAKAAcAAAABAAEAAAAKAAgAAAABAAIAAAAKAAkAAAABAAEAAAAKAAoAAAABAAIAAAAKAAsAAAABAAEAAAAKAAwAAAABAAIAAAAKAA0AAAABAAEAAAAKAA4AAAABAAIAAAAKAA8AAAABAAEAAAAKABAAAAABAAIAAAAKABEAAAABAAMAAAAKABIAAAAEAAIAAAAKABMAAAAEAAIAAAAKABQAAAAEAAIAAAAKABUAAAAEAAIAAAAKABYAAAAEAAIAAAALAAAAAAAEAAIAAAALAAEAAAAEAAIAAAALAAIAAAAEAAIAAAALAAMAAAAEAAIAAAALAAQAAAACAAAAAAALAAUAAAACAAEAAAALAAcAAAACAAEAAAALAAgAAAACAAIAAAALAAkAAAACAAEAAAALAAoAAAACAAIAAAALAAsAAAACAAEAAAALAAwAAAACAAIAAAALAA0AAAACAAEAAAALAA4AAAACAAIAAAALAA8AAAACAAEAAAALABAAAAACAAIAAAALABEAAAACAAMAAAALABIAAAAEAAIAAAALABMAAAAEAAIAAAALABQAAAAEAAIAAAALABUAAAAEAAIAAAALABYAAAAEAAIAAAAMAAAAAAAEAAIAAAAMAAEAAAAEAAIAAAAMAAIAAAAEAAIAAAAMAAMAAAAEAAIAAAAMAAQAAAADAAAAAAAMAAUAAAADAAEAAAAMAAYAAAAEAAEAAAAMAAgAAAABAAIAAAAMAAkAAAABAAEAAAAMAAoAAAABAAIAAAAMAAsAAAABAAEAAAAMAAwAAAABAAIAAAAMAA0AAAABAAEAAAAMAA4AAAABAAIAAAAMAA8AAAAEAAAAAAAMABAAAAADAAIAAAAMABEAAAADAAMAAAAMABIAAAAEAAIAAAAMABMAAAAEAAIAAAAMABQAAAAEAAIAAAAMABUAAAAEAAIAAAAMABYAAAAEAAIAAAANAAAAAAAEAAIAAAANAAEAAAAEAAIAAAANAAIAAAAEAAIAAAANAAMAAAAEAAIAAAANAAQAAAAEAAIAAAANAAUAAAAEAAIAAAANAAYAAAACAAAAAAANAAgAAAACAAIAAAANAAkAAAACAAEAAAANAAoAAAACAAIAAAANAAsAAAACAAEAAAANAAwAAAACAAIAAAANAA0AAAACAAEAAAANAA4AAAACAAIAAAANAA8AAAAFAAAAAAANABAAAAAAAAIAAAANABEAAAAAAAMAAAANABIAAAAEAAIAAAANABMAAAAEAAIAAAANABQAAAAEAAIAAAANABUAAAAEAAIAAAANABYAAAAEAAIAAAAOAAAAAAAEAAIAAAAOAAEAAAAEAAIAAAAOAAIAAAAEAAIAAAAOAAMAAAAEAAIAAAAOAAQAAAAEAAIAAAAOAAUAAAAEAAIAAAAOAAYAAAADAAAAAAAOAAcAAAADAAEAAAAOAAkAAAABAAEAAAAOAAoAAAABAAIAAAAOAAsAAAABAAEAAAAOAAwAAAABAAIAAAAOAA0AAAABAAEAAAAOAA4AAAABAAIAAAAOAA8AAAABAAEAAAAOABAAAAABAAIAAAAOABEAAAACAAMAAAAOABIAAAAEAAIAAAAOABMAAAAEAAIAAAAOABQAAAAEAAIAAAAOABUAAAAEAAIAAAAOABYAAAAEAAIAAAAPAAAAAAAEAAIAAAAPAAEAAAAEAAIAAAAPAAIAAAAEAAIAAAAPAAMAAAAEAAIAAAAPAAQAAAAEAAIAAAAPAAUAAAAEAAIAAAAPAAYAAAAEAAIAAAAPAAcAAAAEAAIAAAAPAAkAAAACAAEAAAAPAAoAAAACAAIAAAAPAAsAAAACAAEAAAAPAAwAAAACAAIAAAAPAA0AAAACAAEAAAAPAA4AAAACAAIAAAAPAA8AAAACAAEAAAAPABAAAAACAAIAAAAPABEAAAAFAAAAAAAPABIAAAAAAAIAAAAPABMAAAAAAAMAAAAPABQAAAAEAAIAAAAPABUAAAAEAAIAAAAPABYAAAAEAAIAAAAQAAAAAAAEAAIAAAAQAAEAAAAEAAIAAAAQAAIAAAAEAAIAAAAQAAMAAAAEAAIAAAAQAAQAAAAEAAIAAAAQAAUAAAAEAAIAAAAQAAYAAAAEAAIAAAAQAAcAAAAEAAIAAAAQAAkAAAABAAEAAAAQAAoAAAABAAIAAAAQAAsAAAABAAEAAAAQAAwAAAABAAIAAAAQAA0AAAABAAEAAAAQAA4AAAABAAIAAAAQAA8AAAABAAEAAAAQABAAAAABAAIAAAAQABEAAAABAAEAAAAQABIAAAABAAIAAAAQABMAAAAFAAAAAAAQABQAAAAAAAIAAAAQABUAAAAAAAMAAAAQABYAAAAEAAIAAAARAAAAAAAEAAIAAAARAAEAAAAEAAIAAAARAAIAAAAEAAIAAAARAAMAAAAEAAIAAAARAAQAAAAEAAIAAAARAAUAAAAEAAIAAAARAAYAAAAEAAIAAAARAAcAAAAEAAIAAAARAAgAAAACAAAAAAARAAoAAAACAAIAAAARAAsAAAACAAEAAAARAAwAAAACAAIAAAARAA0AAAACAAEAAAARAA4AAAACAAIAAAARAA8AAAACAAEAAAARABIAAAABAAIAAAARABMAAAABAAEAAAARABQAAAABAAIAAAARABUAAAABAAMAAAARABYAAAAEAAIAAAASAAAAAAAEAAIAAAASAAEAAAAEAAIAAAASAAIAAAAEAAIAAAASAAMAAAAEAAIAAAASAAQAAAAEAAIAAAASAAUAAAAEAAIAAAASAAYAAAAEAAIAAAASAAcAAAAEAAIAAAASAAgAAAADAAAAAAASAAkAAAADAAEAAAASAAsAAAADAAEAAAASAAwAAAADAAIAAAASAA0AAAADAAEAAAASAA4AAAADAAIAAAASAA8AAAADAAEAAAASABAAAAAEAAEAAAASABIAAAACAAIAAAASABMAAAACAAEAAAASABQAAAACAAIAAAASABUAAAABAAMAAAASABYAAAAEAAIAAAATAAAAAAAEAAIAAAATAAEAAAAEAAIAAAATAAIAAAAEAAIAAAATAAMAAAAEAAIAAAATAAQAAAAEAAIAAAATAAUAAAAEAAIAAAATAAYAAAAEAAIAAAATAAcAAAAEAAIAAAATAAgAAAAEAAIAAAATAAkAAAAEAAIAAAATAAwAAAAEAAIAAAATAA0AAAAEAAIAAAATAA4AAAAEAAIAAAATAA8AAAAEAAIAAAATABEAAAADAAEAAAATABIAAAAEAAEAAAATABMAAAABAAEAAAATABQAAAABAAIAAAATABUAAAACAAMAAAATABYAAAAEAAIAAAAUAAAAAAAEAAIAAAAUAAEAAAAEAAIAAAAUAAIAAAAEAAIAAAAUAAMAAAAEAAIAAAAUAAQAAAAEAAIAAAAUAAUAAAAEAAIAAAAUAAYAAAAEAAIAAAAUAAcAAAAEAAIAAAAUAAgAAAAEAAIAAAAUAAkAAAAEAAIAAAAUAAoAAAAEAAIAAAAUAAsAAAAEAAIAAAAUAA0AAAAEAAIAAAAUAA4AAAAEAAIAAAAUAA8AAAAEAAIAAAAUABEAAAAEAAIAAAAUABIAAAABAAAAAAAUABMAAAACAAEAAAAUABQAAAACAAIAAAAUABUAAAABAAMAAAAUABYAAAAEAAIAAAAVAAAAAAAEAAIAAAAVAAEAAAAEAAIAAAAVAAIAAAAEAAIAAAAVAAMAAAAEAAIAAAAVAAQAAAAEAAIAAAAVAAUAAAAEAAIAAAAVAAYAAAAEAAIAAAAVAAcAAAAEAAIAAAAVAAgAAAAEAAIAAAAVAAkAAAAEAAIAAAAVAAoAAAAEAAIAAAAVAAsAAAAEAAIAAAAVAAwAAAAEAAIAAAAVABEAAAAAAAEAAAAVABIAAAAFAAEAAAAVABMAAAACAAEAAAAVABQAAAACAAIAAAAVABUAAAACAAMAAAAVABYAAAAEAAIAAAAWAAAAAAAEAAIAAAAWAAEAAAAEAAIAAAAWAAIAAAAEAAIAAAAWAAMAAAAEAAIAAAAWAAQAAAAEAAIAAAAWAAUAAAAEAAIAAAAWAAYAAAAEAAIAAAAWAAcAAAAEAAIAAAAWAAgAAAAEAAIAAAAWAAkAAAAEAAIAAAAWAAoAAAAEAAIAAAAWAAsAAAAEAAIAAAAWAAwAAAAEAAIAAAAWAA0AAAAEAAIAAAAWAA4AAAAEAAIAAAAWAA8AAAAEAAIAAAAWABAAAAABAAAAAAAWABEAAAABAAEAAAAWABIAAAABAAIAAAAWABMAAAABAAEAAAAWABQAAAABAAIAAAAWABUAAAABAAMAAAAWABYAAAAEAAIAAAAXAAAAAAAEAAIAAAAXAAEAAAAEAAIAAAAXAAIAAAAEAAIAAAAXAAMAAAAEAAIAAAAXAAQAAAAEAAIAAAAXAAUAAAAEAAIAAAAXAAYAAAAEAAIAAAAXAAcAAAAEAAIAAAAXAAgAAAAEAAIAAAAXAAkAAAAEAAIAAAAXAAoAAAAEAAIAAAAXAAsAAAAEAAIAAAAXAAwAAAAAAAAAAAAXAA0AAAAAAAEAAAAXAA4AAAAAAAIAAAAXAA8AAAAAAAEAAAAXABAAAAAFAAEAAAAXABEAAAACAAEAAAAXABIAAAACAAIAAAAXABMAAAACAAEAAAAXABQAAAACAAIAAAAXABUAAAACAAMAAAAXABYAAAAEAAIAAAAYAAAAAAAEAAIAAAAYAAEAAAAEAAIAAAAYAAIAAAAEAAIAAAAYAAMAAAAEAAIAAAAYAAQAAAAEAAIAAAAYAAUAAAAEAAIAAAAYAAYAAAAEAAIAAAAYAAcAAAAEAAIAAAAYAAgAAAAEAAIAAAAYAAkAAAAEAAIAAAAYAAoAAAAEAAIAAAAYAAsAAAAEAAIAAAAYAAwAAAABAAAAAAAYAA0AAAABAAEAAAAYAA4AAAABAAIAAAAYAA8AAAABAAEAAAAYABAAAAABAAIAAAAYABEAAAABAAEAAAAYABIAAAABAAIAAAAYABMAAAABAAEAAAAYABQAAAABAAIAAAAYABUAAAABAAMAAAAYABYAAAAEAAIAAAAZAAAAAAAEAAIAAAAZAAEAAAAEAAIAAAAZAAIAAAAEAAIAAAAZAAMAAAAEAAIAAAAZAAQAAAAEAAIAAAAZAAUAAAAEAAIAAAAZAAYAAAAEAAIAAAAZAAcAAAAEAAIAAAAZAAgAAAAEAAIAAAAZAAkAAAAEAAIAAAAZAAoAAAAEAAIAAAAZAAsAAAAEAAIAAAAZAAwAAAACAAAAAAAZAA0AAAACAAEAAAAZAA4AAAACAAIAAAAZAA8AAAACAAEAAAAZABAAAAACAAIAAAAZABEAAAACAAEAAAAZABIAAAACAAIAAAAZABMAAAACAAEAAAAZABQAAAACAAIAAAAZABUAAAAFAAAAAAAZABYAAAAAAAIAAAAaAAAAAAAEAAIAAAAaAAEAAAAEAAIAAAAaAAIAAAAEAAIAAAAaAAMAAAAEAAIAAAAaAAQAAAAEAAIAAAAaAAUAAAAEAAIAAAAaAAYAAAAEAAIAAAAaAAcAAAAEAAIAAAAaAAgAAAAEAAIAAAAaAAkAAAAEAAIAAAAaAAoAAAAEAAIAAAAaAAsAAAAEAAIAAAAaAAwAAAABAAAAAAAaAA0AAAABAAEAAAAaAA4AAAABAAIAAAAaAA8AAAABAAEAAAAaABAAAAABAAIAAAAaABEAAAABAAEAAAAaABIAAAABAAIAAAAaABMAAAABAAEAAAAaABQAAAABAAIAAAAaABUAAAABAAEAAAAaABYAAAABAAIAAAAbAAAAAAAEAAIAAAAbAAEAAAAEAAIAAAAbAAIAAAAEAAIAAAAbAAMAAAAEAAIAAAAbAAQAAAAEAAIAAAAbAAUAAAAEAAIAAAAbAAYAAAAEAAIAAAAbAAcAAAAEAAIAAAAbAAgAAAAEAAIAAAAbAAkAAAAEAAIAAAAbAAoAAAAAAAAAAAAbAAsAAAAAAAEAAAAbAAwAAAAFAAEAAAAbAA0AAAACAAEAAAAbAA4AAAACAAIAAAAbAA8AAAACAAEAAAAbABAAAAACAAIAAAAbABEAAAACAAEAAAAbABIAAAACAAIAAAAbABMAAAACAAEAAAAbABQAAAACAAIAAAAbABUAAAACAAEAAAAbABYAAAACAAIAAAAcAAAAAAAEAAIAAAAcAAEAAAAEAAIAAAAcAAIAAAAEAAIAAAAcAAMAAAAEAAIAAAAcAAQAAAAEAAIAAAAcAAUAAAAEAAIAAAAcAAYAAAAEAAIAAAAcAAcAAAAEAAIAAAAcAAgAAAAEAAIAAAAcAAkAAAAEAAIAAAAcAAoAAAABAAAAAAAcAAsAAAABAAEAAAAcAAwAAAABAAIAAAAcAA0AAAABAAEAAAAcAA4AAAABAAIAAAAcAA8AAAABAAEAAAAcABAAAAABAAIAAAAcABEAAAABAAEAAAAcABIAAAABAAIAAAAcABMAAAABAAEAAAAcABQAAAABAAIAAAAcABUAAAABAAEAAAAcABYAAAABAAIAAAAdAAAAAAAEAAIAAAAdAAEAAAAEAAIAAAAdAAIAAAAEAAIAAAAdAAMAAAAEAAIAAAAdAAQAAAAEAAIAAAAdAAUAAAAEAAIAAAAdAAYAAAAEAAIAAAAdAAcAAAAEAAIAAAAdAAgAAAAEAAIAAAAdAAkAAAAEAAIAAAAdAAoAAAACAAAAAAAdAAsAAAACAAEAAAAdAAwAAAACAAIAAAAdAA0AAAACAAEAAAAdAA4AAAACAAIAAAAdAA8AAAACAAEAAAAdABAAAAACAAIAAAAdABEAAAACAAEAAAAdABIAAAACAAIAAAAdABMAAAACAAEAAAAdABQAAAACAAIAAAAdABUAAAACAAEAAAAdABYAAAACAAIAAAAeAAAAAAAEAAIAAAAeAAEAAAAEAAIAAAAeAAIAAAAEAAIAAAAeAAMAAAAEAAIAAAAeAAQAAAAEAAIAAAAeAAUAAAAEAAIAAAAeAAYAAAAEAAIAAAAeAAcAAAAEAAIAAAAeAAgAAAAEAAIAAAAeAAkAAAAEAAIAAAAeAAoAAAADAAAAAAAeAAsAAAADAAIAAAAeAAwAAAAEAAEAAAAeAA0AAAABAAEAAAAeAA4AAAABAAIAAAAeAA8AAAABAAEAAAAeABAAAAABAAIAAAAeABEAAAABAAEAAAAeABIAAAABAAIAAAAeABMAAAAEAAAAAAAeABQAAAADAAIAAAAeABUAAAADAAEAAAAeABYAAAADAAIAAAAfAAAAAAAEAAIAAAAfAAEAAAAEAAIAAAAfAAIAAAAEAAIAAAAfAAMAAAAEAAIAAAAfAAQAAAAEAAIAAAAfAAUAAAAEAAIAAAAfAAYAAAAEAAIAAAAfAAcAAAAEAAIAAAAfAAgAAAAEAAIAAAAfAAkAAAAEAAIAAAAfAAoAAAAEAAIAAAAfAAsAAAAEAAIAAAAfAAwAAAABAAAAAAAfAA0AAAACAAEAAAAfAA4AAAACAAIAAAAfAA8AAAACAAEAAAAfABAAAAACAAIAAAAfABEAAAACAAEAAAAfABIAAAACAAIAAAAfABMAAAABAAMAAAAfABQAAAAEAAIAAAAfABUAAAAEAAIAAAAfABYAAAAEAAIAAAAgAAAAAAAEAAIAAAAgAAEAAAAEAAIAAAAgAAIAAAAEAAIAAAAgAAMAAAAEAAIAAAAgAAQAAAAEAAIAAAAgAAUAAAAEAAIAAAAgAAYAAAAEAAIAAAAgAAcAAAAEAAIAAAAgAAgAAAAEAAIAAAAgAAkAAAAEAAIAAAAgAAoAAAAEAAIAAAAgAAsAAAAEAAIAAAAgAAwAAAADAAAAAAAgAA0AAAADAAEAAAAgAA4AAAADAAIAAAAgAA8AAAADAAEAAAAgABAAAAADAAIAAAAgABEAAAADAAEAAAAgABIAAAADAAIAAAAgABMAAAADAAMAAAAgABQAAAAEAAIAAAAgABUAAAAEAAIAAAAgABYAAAAEAAIAAAAhAAAAAAAEAAIAAAAhAAEAAAAEAAIAAAAhAAIAAAAEAAIAAAAhAAMAAAAEAAIAAAAhAAQAAAAEAAIAAAAhAAUAAAAEAAIAAAAhAAYAAAAEAAIAAAAhAAcAAAAEAAIAAAAhAAgAAAAEAAIAAAAhAAkAAAAEAAIAAAAhAAoAAAAEAAIAAAAhAAsAAAAEAAIAAAAhAAwAAAAEAAIAAAAhAA0AAAAEAAIAAAAhAA4AAAAEAAIAAAAhAA8AAAAEAAIAAAAhABAAAAAEAAIAAAAhABEAAAAEAAIAAAAhABIAAAAEAAIAAAAhABMAAAAEAAIAAAAhABQAAAAEAAIAAAAhABUAAAAEAAIAAAAhABYAAAAEAAIAAAAiAAAAAAAEAAIAAAAiAAEAAAAEAAIAAAAiAAIAAAAEAAIAAAAiAAMAAAAEAAIAAAAiAAQAAAAEAAIAAAAiAAUAAAAEAAIAAAAiAAYAAAAEAAIAAAAiAAcAAAAEAAIAAAAiAAgAAAAEAAIAAAAiAAkAAAAEAAIAAAAiAAoAAAAEAAIAAAAiAAsAAAAEAAIAAAAiAAwAAAAEAAIAAAAiAA0AAAAEAAIAAAAiAA4AAAAEAAIAAAAiAA8AAAAEAAIAAAAiABAAAAAEAAIAAAAiABEAAAAEAAIAAAAiABIAAAAEAAIAAAAiABMAAAAEAAIAAAAiABQAAAAEAAIAAAAiABUAAAAEAAIAAAAiABYAAAAEAAIAAAAjAAAAAAAEAAIAAAAjAAEAAAAEAAIAAAAjAAIAAAAEAAIAAAAjAAMAAAAEAAIAAAAjAAQAAAAEAAIAAAAjAAUAAAAEAAIAAAAjAAYAAAAEAAIAAAAjAAcAAAAEAAIAAAAjAAgAAAAEAAIAAAAjAAkAAAAEAAIAAAAjAAoAAAAEAAIAAAAjAAsAAAAEAAIAAAAjAAwAAAAEAAIAAAAjAA0AAAAEAAIAAAAjAA4AAAAEAAIAAAAjAA8AAAAEAAIAAAAjABAAAAAEAAIAAAAjABEAAAAEAAIAAAAjABIAAAAEAAIAAAAjABMAAAAEAAIAAAAjABQAAAAEAAIAAAAjABUAAAAEAAIAAAAjABYAAAAEAAIAAAAAABcAAAAEAAIAAAAAABgAAAAEAAMAAAABABcAAAAFAAIAAAABABgAAAAFAAMAAAACABcAAAAEAAIAAAACABgAAAAEAAMAAAADABcAAAAFAAIAAAADABgAAAAFAAMAAAAEABcAAAAEAAIAAAAEABgAAAAEAAMAAAAFABcAAAAFAAIAAAAFABgAAAAFAAMAAAAGABcAAAAEAAIAAAAGABgAAAAEAAMAAAAHABcAAAAFAAIAAAAHABgAAAAFAAMAAAAIABcAAAAEAAIAAAAIABgAAAAEAAMAAAAJABcAAAAFAAIAAAAJABgAAAAFAAMAAAAKABcAAAAEAAIAAAAKABgAAAAEAAMAAAALABcAAAAFAAIAAAALABgAAAAFAAMAAAAMABcAAAAEAAIAAAAMABgAAAAEAAMAAAANABcAAAAFAAIAAAANABgAAAAFAAMAAAAOABcAAAAEAAIAAAAOABgAAAAEAAMAAAAPABcAAAAFAAIAAAAPABgAAAAFAAMAAAAQABcAAAAEAAIAAAAQABgAAAAEAAMAAAARABcAAAAFAAIAAAARABgAAAAFAAMAAAASABcAAAAEAAIAAAASABgAAAAEAAMAAAATABcAAAAFAAIAAAATABgAAAAFAAMAAAAUABcAAAAEAAIAAAAUABgAAAAEAAMAAAAVABcAAAAFAAIAAAAVABgAAAAFAAMAAAAWABcAAAAEAAIAAAAWABgAAAAEAAMAAAAXABcAAAAFAAIAAAAXABgAAAAFAAMAAAAYABcAAAAEAAIAAAAYABgAAAAEAAMAAAAZABcAAAAAAAMAAAAZABgAAAAFAAMAAAAaABcAAAABAAMAAAAaABgAAAAEAAMAAAAbABcAAAACAAMAAAAbABgAAAAFAAMAAAAcABcAAAABAAMAAAAcABgAAAAEAAMAAAAdABcAAAACAAMAAAAdABgAAAAFAAMAAAAeABcAAAADAAMAAAAeABgAAAAEAAMAAAAfABcAAAAFAAIAAAAfABgAAAAFAAMAAAAgABcAAAAEAAIAAAAgABgAAAAEAAMAAAAhABcAAAAFAAIAAAAhABgAAAAFAAMAAAAiABcAAAAEAAIAAAAiABgAAAAEAAMAAAAjABcAAAAFAAIAAAAjABgAAAAFAAMAAAA=")
tile_set = ExtResource("1_xkaxe")

[node name="base_layer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAeABAAAAACAAEAAAAeAA8AAAACAAEAAAAeAA4AAAACAAIAAAAeAA0AAAABAAIAAAAeAAwAAAACAAEAAAAeAAsAAAACAAEAAAAeAAoAAAABAAEAAAAeAAkAAAACAAAAAAAeAAgAAAAFAAMAAAAeAAcAAAAEAAIAAAAeAAYAAAAEAAIAAAAeAAUAAAAEAAMAAAAeAAQAAAADAAMAAAAeAAMAAAADAAEAAAAeAAIAAAADAAAAAAAeAAEAAAAEAAIAAAAdABAAAAAFAAAAAAAdAA8AAAACAAIAAAAdAA4AAAACAAEAAAAdAA0AAAACAAEAAAAdAAwAAAACAAIAAAAdAAsAAAACAAEAAAAdAAoAAAABAAIAAAAdAAkAAAACAAAAAAAdAAgAAAAEAAMAAAAdAAcAAAAEAAIAAAAdAAYAAAADAAMAAAAdAAUAAAADAAIAAAAdAAQAAAAEAAAAAAAdAAMAAAACAAEAAAAdAAIAAAAEAAEAAAAdAAEAAAADAAAAAAAcABAAAAAAAAMAAAAcAA8AAAAFAAAAAAAcAA4AAAACAAEAAAAcAA0AAAACAAEAAAAcAAwAAAABAAIAAAAcAAsAAAACAAIAAAAcAAoAAAAFAAEAAAAcAAkAAAAAAAAAAAAcAAgAAAAEAAIAAAAcAAcAAAAFAAIAAAAcAAYAAAACAAMAAAAcAAUAAAACAAEAAAAcAAQAAAACAAIAAAAcAAMAAAACAAEAAAAcAAIAAAABAAIAAAAcAAEAAAABAAAAAAAbABAAAAAEAAMAAAAbAA8AAAAAAAMAAAAbAA4AAAAAAAIAAAAbAA0AAAAFAAAAAAAbAAwAAAACAAEAAAAbAAsAAAABAAEAAAAbAAoAAAABAAAAAAAbAAkAAAAFAAIAAAAbAAgAAAADAAMAAAAbAAcAAAADAAIAAAAbAAYAAAAEAAAAAAAbAAUAAAACAAIAAAAbAAQAAAAAAAgAAAAbAAMAAAAFAAAAAAAbAAIAAAACAAIAAAAbAAEAAAABAAAAAAAaABAAAAAFAAIAAAAaAA8AAAAEAAMAAAAaAA4AAAAFAAMAAAAaAA0AAAAAAAMAAAAaAAwAAAAAAAEAAAAaAAsAAAAAAAIAAAAaAAoAAAAAAAAAAAAaAAkAAAADAAMAAAAaAAgAAAAEAAAAAAAaAAcAAAABAAEAAAAaAAYAAAABAAEAAAAaAAUAAAABAAIAAAAaAAQAAAABAAEAAAAaAAMAAAACAAQAAAAaAAIAAAABAAEAAAAaAAEAAAAEAAEAAAAZABAAAAAFAAMAAAAZAA8AAAADAAMAAAAZAA4AAAADAAEAAAAZAA0AAAADAAEAAAAZAAwAAAADAAAAAAAZAAsAAAAEAAMAAAAZAAoAAAAFAAIAAAAZAAkAAAABAAMAAAAZAAgAAAACAAEAAAAZAAcAAAABAAEAAAAZAAYAAAABAAIAAAAZAAUAAAAAAAgAAAAZAAQAAAAAAAIAAAAZAAMAAAACAAMAAAAZAAIAAAABAAIAAAAZAAEAAAACAAIAAAAYABAAAAADAAMAAAAYAA8AAAAEAAAAAAAYAA4AAAABAAIAAAAYAA0AAAABAAIAAAAYAAwAAAAEAAEAAAAYAAsAAAADAAEAAAAYAAoAAAADAAMAAAAYAAkAAAAEAAAAAAAYAAgAAAABAAEAAAAYAAcAAAADAAQAAAAYAAYAAAACAAEAAAAYAAUAAAABAAIAAAAYAAQAAAABAAAAAAAYAAMAAAACAAMAAAAYAAIAAAABAAEAAAAYAAEAAAACAAEAAAAXABAAAAACAAMAAAAXAA8AAAACAAEAAAAXAA4AAAABAAIAAAAXAA0AAAABAAEAAAAXAAwAAAABAAIAAAAXAAsAAAACAAEAAAAXAAoAAAAAAAQAAAAXAAkAAAABAAIAAAAXAAgAAAAFAAEAAAAXAAcAAAACAAMAAAAXAAYAAAABAAEAAAAXAAUAAAACAAIAAAAXAAQAAAABAAAAAAAXAAMAAAACAAMAAAAXAAIAAAACAAEAAAAXAAEAAAAFAAEAAAAWABAAAAAAAAMAAAAWAA8AAAAAAAEAAAAWAA4AAAAAAAEAAAAWAA0AAAAAAAEAAAAWAAwAAAAFAAAAAAAWAAsAAAABAAEAAAAWAAoAAAACAAEAAAAWAAkAAAACAAIAAAAWAAgAAAAEAAEAAAAWAAcAAAAEAAAAAAAWAAYAAAABAAIAAAAWAAUAAAACAAIAAAAWAAQAAAABAAAAAAAWAAMAAAABAAMAAAAWAAIAAAABAAIAAAAWAAEAAAAEAAEAAAAVABAAAAADAAAAAAAVAA8AAAAEAAIAAAAVAA4AAAAEAAIAAAAVAA0AAAAEAAMAAAAVAAwAAAAAAAMAAAAVAAsAAAAFAAAAAAAVAAoAAAABAAEAAAAVAAkAAAACAAIAAAAVAAgAAAACAAIAAAAVAAcAAAABAAIAAAAVAAYAAAACAAEAAAAVAAUAAAABAAEAAAAVAAQAAAACAAAAAAAVAAMAAAACAAMAAAAVAAIAAAACAAEAAAAVAAEAAAACAAIAAAAUABAAAAAEAAEAAAAUAA8AAAADAAAAAAAUAA4AAAAEAAIAAAAUAA0AAAAFAAMAAAAUAAwAAAAEAAIAAAAUAAsAAAAAAAMAAAAUAAoAAAAAAAUAAAAUAAkAAAABAAIAAAAUAAgAAAABAAIAAAAUAAcAAAAFAAEAAAAUAAYAAAAAAAIAAAAUAAUAAAAAAAEAAAAUAAQAAAAAAAAAAAAUAAMAAAAAAAMAAAAUAAIAAAAFAAAAAAAUAAEAAAACAAEAAAATABAAAAACAAEAAAATAA8AAAACAAAAAAATAA4AAAAEAAIAAAATAA0AAAAFAAIAAAATAAwAAAAFAAMAAAATAAsAAAACAAMAAAATAAoAAAACAAEAAAATAAkAAAABAAEAAAATAAgAAAAFAAEAAAATAAcAAAAAAAAAAAATAAYAAAAEAAIAAAATAAUAAAADAAMAAAATAAQAAAADAAIAAAATAAMAAAADAAIAAAATAAIAAAAEAAAAAAATAAEAAAACAAEAAAASABAAAAABAAEAAAASAA8AAAAEAAEAAAASAA4AAAADAAEAAAASAA0AAAADAAAAAAASAAwAAAAEAAMAAAASAAsAAAACAAMAAAASAAoAAAABAAEAAAASAAkAAAAFAAEAAAASAAgAAAAAAAAAAAASAAcAAAAEAAMAAAASAAYAAAAFAAMAAAASAAUAAAABAAMAAAASAAQAAAABAAEAAAASAAMAAAACAAIAAAASAAIAAAABAAEAAAASAAEAAAAFAAEAAAARABAAAAABAAEAAAARAA8AAAACAAIAAAARAA4AAAACAAEAAAARAA0AAAACAAAAAAARAAwAAAAFAAMAAAARAAsAAAACAAMAAAARAAoAAAACAAEAAAARAAkAAAABAAAAAAARAAgAAAAEAAMAAAARAAcAAAAFAAMAAAARAAYAAAAEAAMAAAARAAUAAAABAAMAAAARAAQAAAABAAIAAAARAAMAAAABAAIAAAARAAIAAAABAAIAAAARAAEAAAABAAAAAAAQABAAAAACAAIAAAAQAA8AAAACAAIAAAAQAA4AAAACAAEAAAAQAA0AAAABAAAAAAAQAAwAAAAEAAMAAAAQAAsAAAACAAMAAAAQAAoAAAABAAEAAAAQAAkAAAACAAAAAAAQAAgAAAADAAEAAAAQAAcAAAADAAAAAAAQAAYAAAAFAAIAAAAQAAUAAAAAAAMAAAAQAAQAAAAAAAEAAAAQAAMAAAAFAAAAAAAQAAIAAAABAAIAAAAQAAEAAAABAAAAAAAPABAAAAABAAIAAAAPAA8AAAAFAAEAAAAPAA4AAAAAAAEAAAAPAA0AAAAAAAAAAAAPAAwAAAADAAMAAAAPAAsAAAAEAAAAAAAPAAoAAAACAAIAAAAPAAkAAAAAAAQAAAAPAAgAAAABAAIAAAAPAAcAAAABAAAAAAAPAAYAAAAEAAIAAAAPAAUAAAAEAAIAAAAPAAQAAAAEAAIAAAAPAAMAAAABAAMAAAAPAAIAAAACAAEAAAAPAAEAAAACAAAAAAAOABAAAAAFAAEAAAAOAA8AAAAAAAAAAAAOAA4AAAAEAAMAAAAOAA0AAAADAAMAAAAOAAwAAAAEAAAAAAAOAAsAAAABAAIAAAAOAAoAAAABAAIAAAAOAAkAAAACAAIAAAAOAAgAAAABAAIAAAAOAAcAAAAAAAAAAAAOAAYAAAAEAAMAAAAOAAUAAAAFAAIAAAAOAAQAAAAFAAMAAAAOAAMAAAACAAMAAAAOAAIAAAABAAEAAAAOAAEAAAABAAAAAAANABAAAAACAAAAAAANAA8AAAAFAAIAAAANAA4AAAADAAMAAAANAA0AAAAEAAAAAAANAAwAAAABAAEAAAANAAsAAAACAAEAAAANAAoAAAACAAEAAAANAAkAAAAAAAgAAAANAAgAAAAAAAcAAAANAAcAAAADAAIAAAANAAYAAAADAAAAAAANAAUAAAAEAAIAAAANAAQAAAAFAAMAAAANAAMAAAAAAAMAAAANAAIAAAAAAAIAAAANAAEAAAAAAAAAAAAMABAAAAAAAAAAAAAMAA8AAAAFAAIAAAAMAA4AAAACAAMAAAAMAA0AAAACAAIAAAAMAAwAAAACAAEAAAAMAAsAAAACAAIAAAAMAAoAAAAAAAQAAAAMAAkAAAABAAIAAAAMAAgAAAACAAEAAAAMAAcAAAACAAEAAAAMAAYAAAAEAAEAAAAMAAUAAAADAAAAAAAMAAQAAAAEAAMAAAAMAAMAAAAEAAIAAAAMAAIAAAAEAAMAAAAMAAEAAAAEAAMAAAALABAAAAAFAAMAAAALAA8AAAAEAAMAAAALAA4AAAABAAMAAAALAA0AAAABAAEAAAALAAwAAAACAAEAAAALAAsAAAAAAAUAAAALAAoAAAABAAIAAAALAAkAAAACAAEAAAALAAgAAAAFAAAAAAALAAcAAAACAAIAAAALAAYAAAABAAEAAAALAAUAAAABAAAAAAALAAQAAAAFAAMAAAALAAMAAAAFAAIAAAALAAIAAAAEAAIAAAALAAEAAAAFAAIAAAAKABAAAAAFAAIAAAAKAA8AAAAFAAMAAAAKAA4AAAABAAMAAAAKAA0AAAACAAIAAAAKAAwAAAACAAEAAAAKAAsAAAABAAIAAAAKAAoAAAABAAIAAAAKAAkAAAAFAAEAAAAKAAgAAAAAAAMAAAAKAAcAAAAFAAAAAAAKAAYAAAACAAIAAAAKAAUAAAAEAAEAAAAKAAQAAAADAAAAAAAKAAMAAAAFAAMAAAAKAAIAAAAFAAMAAAAKAAEAAAAEAAIAAAAJABAAAAAEAAIAAAAJAA8AAAAEAAIAAAAJAA4AAAAAAAMAAAAJAA0AAAAFAAAAAAAJAAwAAAACAAEAAAAJAAsAAAABAAIAAAAJAAoAAAAFAAEAAAAJAAkAAAAAAAAAAAAJAAgAAAAFAAMAAAAJAAcAAAACAAMAAAAJAAYAAAABAAEAAAAJAAUAAAACAAIAAAAJAAQAAAABAAAAAAAJAAMAAAAFAAMAAAAJAAIAAAAFAAIAAAAJAAEAAAAEAAMAAAAIABAAAAAFAAIAAAAIAA8AAAAEAAMAAAAIAA4AAAAFAAMAAAAIAA0AAAAAAAMAAAAIAAwAAAAAAAEAAAAIAAsAAAAAAAEAAAAIAAoAAAAAAAAAAAAIAAkAAAAFAAIAAAAIAAgAAAAEAAIAAAAIAAcAAAAAAAMAAAAIAAYAAAAAAAIAAAAIAAUAAAAAAAEAAAAIAAQAAAAAAAAAAAAIAAMAAAAFAAIAAAAIAAIAAAAFAAMAAAAIAAEAAAAEAAMAAAAHABAAAAAEAAMAAAAHAA8AAAAEAAMAAAAHAA4AAAAEAAIAAAAHAA0AAAAFAAMAAAAHAAwAAAADAAMAAAAHAAsAAAADAAEAAAAHAAoAAAADAAEAAAAHAAkAAAADAAEAAAAHAAgAAAADAAAAAAAHAAcAAAAFAAIAAAAHAAYAAAAFAAMAAAAHAAUAAAAFAAIAAAAHAAQAAAAFAAIAAAAHAAMAAAAEAAIAAAAHAAIAAAAFAAIAAAAHAAEAAAAEAAMAAAAGABAAAAAEAAIAAAAGAA8AAAAEAAIAAAAGAA4AAAAEAAIAAAAGAA0AAAADAAMAAAAGAAwAAAAEAAAAAAAGAAsAAAACAAEAAAAGAAoAAAABAAEAAAAGAAkAAAABAAEAAAAGAAgAAAACAAAAAAAGAAcAAAADAAEAAAAGAAYAAAADAAIAAAAGAAUAAAADAAIAAAAGAAQAAAADAAAAAAAGAAMAAAAFAAIAAAAGAAIAAAAEAAIAAAAGAAEAAAAEAAMAAAAFABAAAAAEAAIAAAAFAA8AAAAFAAMAAAAFAA4AAAAFAAIAAAAFAA0AAAACAAMAAAAFAAwAAAABAAEAAAAFAAsAAAACAAEAAAAFAAoAAAADAAQAAAAFAAkAAAABAAIAAAAFAAgAAAABAAQAAAAFAAcAAAACAAEAAAAFAAYAAAACAAEAAAAFAAUAAAABAAIAAAAFAAQAAAACAAAAAAAFAAMAAAAFAAIAAAAFAAIAAAAFAAIAAAAFAAEAAAAEAAMAAAAEABAAAAAEAAIAAAAEAA8AAAAFAAIAAAAEAA4AAAAFAAIAAAAEAA0AAAACAAMAAAAEAAwAAAACAAIAAAAEAAsAAAABAAIAAAAEAAoAAAAAAAQAAAAEAAkAAAACAAIAAAAEAAgAAAAAAAQAAAAEAAcAAAABAAEAAAAEAAYAAAADAAQAAAAEAAUAAAACAAEAAAAEAAQAAAABAAAAAAAEAAMAAAAFAAMAAAAEAAIAAAAEAAMAAAAEAAEAAAAFAAMAAAADABAAAAAFAAMAAAADAA8AAAAFAAMAAAADAA4AAAAFAAMAAAADAA0AAAAAAAMAAAADAAwAAAAFAAAAAAADAAsAAAABAAIAAAADAAoAAAABAAEAAAADAAkAAAACAAEAAAADAAgAAAACAAIAAAADAAcAAAABAAEAAAADAAYAAAABAAQAAAADAAUAAAACAAIAAAADAAQAAAABAAAAAAADAAMAAAAEAAMAAAADAAIAAAAFAAIAAAADAAEAAAAFAAIAAAACABAAAAAEAAMAAAACAA8AAAAEAAMAAAACAA4AAAAEAAMAAAACAA0AAAAFAAIAAAACAAwAAAAAAAMAAAACAAsAAAAAAAEAAAACAAoAAAAFAAAAAAACAAkAAAACAAIAAAACAAgAAAABAAEAAAACAAcAAAAFAAEAAAACAAYAAAACAAMAAAACAAUAAAACAAIAAAACAAQAAAACAAAAAAACAAMAAAAFAAIAAAACAAIAAAAFAAIAAAACAAEAAAAEAAIAAAAfABIAAAAFAAIAAAAfABEAAAADAAMAAAAfABAAAAADAAEAAAAfAA8AAAADAAEAAAAfAA4AAAADAAEAAAAfAA0AAAADAAIAAAAfAAwAAAADAAEAAAAfAAsAAAADAAEAAAAfAAoAAAADAAEAAAAfAAkAAAADAAAAAAAfAAgAAAAFAAIAAAAfAAcAAAAFAAIAAAAfAAYAAAAFAAMAAAAfAAUAAAAFAAIAAAAfAAQAAAAEAAMAAAAfAAMAAAAEAAMAAAAfAAIAAAAEAAIAAAAfAAEAAAAEAAIAAAAeABIAAAAEAAMAAAAeABEAAAABAAMAAAAdABIAAAAFAAIAAAAdABEAAAAAAAMAAAAcABIAAAAFAAMAAAAcABEAAAAFAAIAAAAbABIAAAAEAAIAAAAbABEAAAAFAAIAAAAaABIAAAAEAAIAAAAaABEAAAAEAAIAAAAZABIAAAAEAAMAAAAZABEAAAAEAAIAAAAYABIAAAAFAAIAAAAYABEAAAAFAAIAAAAXABIAAAAEAAIAAAAXABEAAAAEAAIAAAAWABIAAAAFAAIAAAAWABEAAAAFAAMAAAAVABIAAAADAAMAAAAVABEAAAADAAEAAAAUABIAAAABAAMAAAAUABEAAAABAAEAAAATABIAAAABAAMAAAATABEAAAABAAIAAAASABIAAAABAAMAAAASABEAAAACAAIAAAARABIAAAACAAMAAAARABEAAAACAAEAAAAQABIAAAABAAMAAAAQABEAAAACAAEAAAAPABIAAAACAAMAAAAPABEAAAACAAIAAAAOABIAAAAEAAAAAAAOABEAAAACAAIAAAANABIAAAACAAIAAAANABEAAAABAAIAAAAMABIAAAABAAIAAAAMABEAAAAFAAEAAAALABIAAAABAAIAAAALABEAAAABAAAAAAAKABIAAAACAAEAAAAKABEAAAACAAAAAAAJABIAAAAAAAIAAAAJABEAAAAAAAAAAAAIABIAAAAFAAIAAAAIABEAAAAFAAIAAAAHABIAAAAEAAIAAAAHABEAAAAFAAMAAAAGABIAAAAFAAMAAAAGABEAAAAEAAMAAAAFABIAAAAFAAMAAAAFABEAAAAEAAMAAAAEABIAAAAEAAMAAAAEABEAAAAEAAIAAAADABIAAAAEAAMAAAADABEAAAAFAAMAAAACABIAAAAEAAMAAAACABEAAAAFAAMAAAA=")
tile_set = ExtResource("1_xkaxe")

[node name="features_layer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAHAAwAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAoAAAAAAAAAAAAKAAkAAAAAAAEAAAALAAoAAAAAAAEAAAAMAAoAAAABAAEAAAALAAsAAAABAAEAAAAMAAwAAAABAAEAAAALAAwAAAABAAEAAAALAAkAAAABAAEAAAAMAAgAAAAAAAIAAAAMAAkAAAABAAEAAAAMAAsAAAAAAAAAAAAKAAgAAAAAAAEAAAALAAgAAAAAAAEAAAALAAcAAAAAAAIAAAALAAYAAAAAAAIAAAAMAAYAAAAAAAIAAAAMAAcAAAAAAAIAAAANAAYAAAAAAAIAAAAHAAQAAAAAAAIAAAAHAAMAAAAAAAIAAAAIAAQAAAAAAAIAAAAHAAUAAAAAAAEAAAAGAAUAAAAAAAIAAAAGAAQAAAAAAAIAAAAFAAMAAAAAAAIAAAAFAAUAAAAAAAEAAAAGAAYAAAAAAAEAAAAHAAYAAAAAAAEAAAAIAAYAAAAAAAEAAAANAAkAAAABAAEAAAANAAgAAAABAAEAAAAOAAYAAAABAAEAAAAPAAYAAAABAAEAAAAPAAUAAAABAAEAAAAOAAUAAAABAAEAAAALAAQAAAAAAAIAAAALAAUAAAAAAAIAAAAMAAUAAAAAAAIAAAAMAAEAAAAAAAIAAAAKAAIAAAAAAAIAAAAKAAEAAAAAAAIAAAAJAAEAAAAAAAIAAAAIAAEAAAAAAAIAAAAGAP//AAAAAAIAAAAGAP7/AAAAAAIAAAAGAP3/AAAAAAIAAAAGAPz/AAAAAAIAAAAFAPz/AAAAAAIAAAAHAPz/AAAAAAIAAAAHAP3/AAAAAAIAAAAIAP3/AAAAAAIAAAAIAP7/AAAAAAIAAAAHAP7/AAAAAAIAAAAPAAEAAAAAAAIAAAAPAP7/AAAAAAIAAAANAA0AAAAAAAAAAAANAAsAAAAAAAAAAAARAAcAAAAAAAAAAAAQAAQAAAAAAAAAAAARAAQAAAAAAAAAAAASAAQAAAAAAAAAAAARAAIAAAAAAAAAAAATAAUAAAAAAAAAAAASAAAAAAAAAAAAAAASAP//AAAAAAAAAAA=")
tile_set = ExtResource("4_kvulu")

[node name="bn_generate" type="Button" parent="."]
offset_left = 421.0
offset_top = 114.0
offset_right = 501.0
offset_bottom = 145.0
text = "Generate"

[node name="Node2D" type="Node2D" parent="."]
y_sort_enabled = true

[connection signal="pressed" from="bn_generate" to="." method="_on_bn_generate_pressed"]
